// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid a11yTitle and aria-label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div>
  <div
    class="c0"
  >
    <div
      aria-label="My Grid"
      class="c1"
    />
    <div
      aria-label="My Other Grid"
      class="c1"
    />
  </div>
</div>
`;

exports[`Grid align renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: first baseline;
  -webkit-box-align: first baseline;
  -ms-flex-align: first baseline;
  align-items: first baseline;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: last baseline;
  -webkit-box-align: last baseline;
  -ms-flex-align: last baseline;
  align-items: last baseline;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: safe center;
  -webkit-box-align: safe center;
  -ms-flex-align: safe center;
  align-items: safe center;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: unsafe center;
  -webkit-box-align: unsafe center;
  -ms-flex-align: unsafe center;
  align-items: unsafe center;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
}

.c12 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: initial;
  -webkit-box-align: initial;
  -ms-flex-align: initial;
  align-items: initial;
}

.c13 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
  <div
    class="c13"
  />
</div>
`;

exports[`Grid alignContent renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: space-around;
  -ms-flex-line-pack: space-around;
  align-content: space-around;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: baseline;
  -ms-flex-line-pack: baseline;
  align-content: baseline;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: space-evenly;
  -ms-flex-line-pack: space-evenly;
  align-content: space-evenly;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: normal;
  -ms-flex-line-pack: normal;
  align-content: normal;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: first baseline;
  -ms-flex-line-pack: first baseline;
  align-content: first baseline;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: last baseline;
  -ms-flex-line-pack: last baseline;
  align-content: last baseline;
}

.c12 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: safe center;
  -ms-flex-line-pack: safe center;
  align-content: safe center;
}

.c13 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: unsafe center;
  -ms-flex-line-pack: unsafe center;
  align-content: unsafe center;
}

.c14 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: inherit;
  -ms-flex-line-pack: inherit;
  align-content: inherit;
}

.c15 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: initial;
  -ms-flex-line-pack: initial;
  align-content: initial;
}

.c16 {
  display: grid;
  box-sizing: border-box;
  -webkit-align-content: unset;
  -ms-flex-line-pack: unset;
  align-content: unset;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c8"
  />
  <div
    class="c12"
  />
  <div
    class="c13"
  />
  <div
    class="c14"
  />
  <div
    class="c15"
  />
  <div
    class="c16"
  />
</div>
`;

exports[`Grid areas renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header main footer" "header sidebar footer" ". .";
  grid-template-columns: 75% 25%;
  grid-template-rows: 48px 384px 96px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Grid areas renders when given an array of string arrays 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-areas: "header header" "sidebar main" "footer footer";
  grid-template-columns: 75% 25%;
  grid-template-rows: 48px 384px 96px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Grid as renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <article
    class="c1"
  />
</div>
`;

exports[`Grid border 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.33);
}

.c2 {
  display: grid;
  box-sizing: border-box;
  border-top: solid 1px rgba(0,0,0,0.33);
  border-bottom: solid 1px rgba(0,0,0,0.33);
}

.c3 {
  display: grid;
  box-sizing: border-box;
  border-left: solid 1px rgba(0,0,0,0.33);
  border-right: solid 1px rgba(0,0,0,0.33);
}

.c4 {
  display: grid;
  box-sizing: border-box;
  border-top: solid 1px rgba(0,0,0,0.33);
}

.c5 {
  display: grid;
  box-sizing: border-box;
  border-left: solid 1px rgba(0,0,0,0.33);
}

.c6 {
  display: grid;
  box-sizing: border-box;
  border-bottom: solid 1px rgba(0,0,0,0.33);
}

.c7 {
  display: grid;
  box-sizing: border-box;
  border-right: solid 1px rgba(0,0,0,0.33);
}

.c8 {
  display: grid;
  box-sizing: border-box;
  border: solid 1px #6FFFB0;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  border: solid 2px rgba(0,0,0,0.33);
}

.c10 {
  display: grid;
  box-sizing: border-box;
  border: solid 4px rgba(0,0,0,0.33);
}

.c11 {
  display: grid;
  box-sizing: border-box;
  border: solid 12px rgba(0,0,0,0.33);
}

.c12 {
  display: grid;
  box-sizing: border-box;
  border: solid 24px rgba(0,0,0,0.33);
}

.c13 {
  display: grid;
  box-sizing: border-box;
  border: dotted 1px rgba(0,0,0,0.33);
}

.c14 {
  display: grid;
  box-sizing: border-box;
  border: double 1px rgba(0,0,0,0.33);
}

.c15 {
  display: grid;
  box-sizing: border-box;
  border: dashed 1px rgba(0,0,0,0.33);
}

.c16 {
  display: grid;
  box-sizing: border-box;
  border-top: dotted 4px #6FFFB0;
  border-left: dashed 12px #FD6FFF;
}

@media only screen and (max-width:768px) {
  .c1 {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    border-top: solid 1px rgba(0,0,0,0.33);
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    border-left: solid 1px rgba(0,0,0,0.33);
    border-right: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    border-top: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    border-left: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    border-right: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    border: solid 1px #6FFFB0;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    border: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    border: solid 4px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    border: solid 6px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c12 {
    border: solid 12px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    border: dotted 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c14 {
    border: double 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c15 {
    border: dashed 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    border-top: dotted 4px #6FFFB0;
  }
}

@media only screen and (max-width:768px) {
  .c16 {
    border-left: dashed 6px #FD6FFF;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c1"
  />
  <div
    class="c1"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
  <div
    class="c13"
  />
  <div
    class="c14"
  />
  <div
    class="c15"
  />
  <div
    class="c16"
  />
</div>
`;

exports[`Grid columns renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 50% 50%;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 33.33% 66.66%;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: 25% 75%;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: minmax(50%,50%) 25% 75%;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(min(192px,100%),1fr) );
}

.c6 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(33.33%,1fr) );
}

.c7 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,1fr );
}

.c8 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(min(192px,100%),1fr) );
}

.c9 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(min(192px,100%),384px) );
}

.c10 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(min(192px,100%),50%) );
}

.c11 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(25%,384px) );
}

.c12 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fill,minmax(auto,auto) );
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
  <div
    class="c12"
  />
</div>
`;

exports[`Grid fill renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

.c2 {
  display: grid;
  box-sizing: border-box;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  width: 100%;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  height: 100%;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
</div>
`;

exports[`Grid gap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 12px 12px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 24px 24px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 48px 48px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  grid-row-gap: 12px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  grid-row-gap: 24px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  grid-row-gap: 48px;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  grid-column-gap: 12px;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  grid-column-gap: 24px;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  grid-column-gap: 48px;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 12px 24px;
}

.c11 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
</div>
`;

exports[`Grid height 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  height: 96px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  height: 192px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  height: 384px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  height: 768px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  height: 1152px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  height: 111px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c4"
    />
    <div
      class="c5"
    />
    <div
      class="c6"
    />
  </div>
</div>
`;

exports[`Grid height object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  max-height: 100%;
  height: 100px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`Grid justify renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  justify-items: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  justify-items: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  justify-items: flex-end;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  justify-items: stretch;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
</div>
`;

exports[`Grid justifyContent renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
</div>
`;

exports[`Grid pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  padding: 12px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  padding: 24px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  padding: 48px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  padding-left: 12px;
  padding-right: 12px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  padding-bottom: 12px;
}

.c7 {
  display: grid;
  box-sizing: border-box;
  padding-left: 12px;
}

.c8 {
  display: grid;
  box-sizing: border-box;
  padding-right: 12px;
}

.c9 {
  display: grid;
  box-sizing: border-box;
  padding-inline-start: 12px;
}

.c10 {
  display: grid;
  box-sizing: border-box;
  padding-inline-end: 12px;
}

.c11 {
  display: grid;
  box-sizing: border-box;
  padding-top: 12px;
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    padding: 12px;
  }
}

@media only screen and (max-width:768px) {
  .c3 {
    padding: 24px;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c5 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c6 {
    padding-bottom: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-left: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c8 {
    padding-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c9 {
    padding-inline-start: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c10 {
    padding-inline-end: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    padding-top: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
  <div
    class="c4"
  />
  <div
    class="c5"
  />
  <div
    class="c6"
  />
  <div
    class="c7"
  />
  <div
    class="c8"
  />
  <div
    class="c9"
  />
  <div
    class="c10"
  />
  <div
    class="c11"
  />
</div>
`;

exports[`Grid renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`Grid responsive 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c1"
  />
</div>
`;

exports[`Grid rows renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-rows: minmax(192px,384px) 768px 384px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  grid-template-rows: 192px 768px 384px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  grid-auto-rows: 192px;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
</div>
`;

exports[`Grid width 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  width: 96px;
}

.c2 {
  display: grid;
  box-sizing: border-box;
  width: 192px;
}

.c3 {
  display: grid;
  box-sizing: border-box;
  width: 384px;
}

.c4 {
  display: grid;
  box-sizing: border-box;
  width: 768px;
}

.c5 {
  display: grid;
  box-sizing: border-box;
  width: 1152px;
}

.c6 {
  display: grid;
  box-sizing: border-box;
  width: 111px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    />
    <div
      class="c3"
    />
    <div
      class="c4"
    />
    <div
      class="c5"
    />
    <div
      class="c6"
    />
  </div>
</div>
`;

exports[`Grid width object 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  max-width: 100%;
  width: 100px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;
